jump to IbeaconPage

--- a/Named_Router_Copy2/android/app/src/main/AndroidManifest.xml
+++ b/Named_Router_Copy2/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
 
    <application
         android:label="RanShy"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+         android:name="${applicationName}"
+        >
+        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
