--- a/Named_Router_Copy2/pubspec.yaml
+++ b/Named_Router_Copy2/pubspec.yaml
@@ -23,14 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  syncfusion_flutter_pdfviewer: ^19.1.69-beta
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_blue: ^0.8.0
-  permission_handler: ^9.1.0
+  permission_handler: any
+  beacons_plugin: ^2.0.8
+  intl: ^0.18.1
+  flutter_local_notifications: ^9.6.0
+  syncfusion_flutter_pdfviewer: ^19.1.69-beta
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
