--- a/Named_Router_Copy2/android/app/src/main/AndroidManifest.xml
+++ b/Named_Router_Copy2/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
     package="com.example.flutterapp">
     <uses-permission android:name="android.permission.BLUETOOTH" />  
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>  
+    <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>   -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
    <application
         android:label="RanShy"
