--- a/Android Studio/android/app/src/main/AndroidManifest.xml
+++ b/Android Studio/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-        <uses-permission android:name="android.permission.BLUETOOTH" />  
-        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
-        <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>   -->
+
+<!-- Get Bluetooth Device -->
+        <uses-permission android:name="android.permission.BLUETOOTH" />
+        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+        <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+        <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+        <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<!-- Get Bluetooth Device -->
         <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
         <uses-permission android:name="android.permission.CALL_PHONE" />
 
