--- a/Android Studio/pubspec.yaml
+++ b/Android Studio/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_blue: ^0.8.0
-  permission_handler: any
+  permission_handler: ^10.4.3
   intl: ^0.18.1
   flutter_local_notifications: ^9.6.0
   syncfusion_flutter_pdfviewer: ^19.1.69-beta
