polify User Interface

--- a/Android Studio/pubspec.yaml
+++ b/Android Studio/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   geolocator: ^9.0.2
   shared_preferences: ^2.2.0
   flutter_tts: ^3.7.0
+  flutter_speech: ^2.0.0
+  speech_to_text: ^6.3.0
 
 dev_dependencies:
   flutter_test:
