--- a/Android Studio/android/app/src/main/AndroidManifest.xml
+++ b/Android Studio/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
         <uses-permission android:name="android.permission.CALL_PHONE" />
     <application
-        android:label="untitled1"
+        android:label="FinalVersion"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
