--- a/Android Studio/pubspec.yaml
+++ b/Android Studio/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_speech: ^2.0.0
   speech_to_text: ^6.3.0
   vibration: ^1.7.5
+  location: ^5.0.1
 
 dev_dependencies:
   flutter_test:
